// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <MedicationsDetailPanel /> should renders with all props correctly 1`] = `
<div
  className="panel panel-secondary open"
>
  <PluginDetailHeader
    currentPanel="TEST_PANEL"
    isBtnShowPanel={true}
    name="TEST_PANEL"
    onExpand={[Function]}
    onShow={[Function]}
    title="Test Title Panel"
  />
  <div
    className="panel-body"
  >
    <SimpleComponent />
  </div>
</div>
`;

exports[`Component <MedicationsDetailPanel /> should renders with all props correctly 2`] = `
<div
  className="panel panel-secondary open"
>
  <PluginDetailHeader
    currentPanel="TEST_PANEL"
    isBtnShowPanel={true}
    name="AnotherPanel"
    onExpand={[Function]}
    onShow={[Function]}
    title="Test Title Panel"
  />
  <div
    className="panel-body"
  >
    <SimpleComponent />
    <div
      className="panel-control"
    >
      <div
        className="wrap-control-group hide-indent-bottom"
      >
        <div
          className="control-group with-indent left hidden-xs"
        />
        <div
          className="control-group with-indent right"
        />
      </div>
    </div>
  </div>
</div>
`;
